; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_memory.c_get_scanline.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_memory.c_get_scanline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@z80_scanline_cycles = common dso_local global i32 0, align 4
@z80_scanline = common dso_local global i32 0, align 4
@Pico = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_scanline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_scanline(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = call i32 (...) @z80_cyclesDone()
  store i32 %8, i32* %4, align 4
  br label %9

9:                                                ; preds = %14, %7
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @z80_scanline_cycles, align 4
  %12 = sub nsw i32 %10, %11
  %13 = icmp sge i32 %12, 228
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i32, i32* @z80_scanline, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @z80_scanline, align 4
  %17 = load i32, i32* @z80_scanline_cycles, align 4
  %18 = add nsw i32 %17, 228
  store i32 %18, i32* @z80_scanline_cycles, align 4
  br label %9

19:                                               ; preds = %9
  %20 = load i32, i32* @z80_scanline, align 4
  store i32 %20, i32* %2, align 4
  br label %23

21:                                               ; preds = %1
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @Pico, i32 0, i32 0, i32 0), align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %19
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @z80_cyclesDone(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
